[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qiskit-addon-opt-mapper"
version = "0.2.0"
readme = "README.md"
description = "An addon for optimization problem modeling, providing various utilities and enhancements."

license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.10"

dependencies = [
    "numpy",
    "cvxpy",
    "qiskit<3",
    "networkx",
    "rustworkx",
    "scipy",
    "docplex"
]

[project.optional-dependencies]
cplex = ["cplex; (python_version < '3.13' and platform_system != 'Darwin') or (python_version < '3.12' and platform_system == 'Darwin')"]
cvx = ["cvxpy"]
matplotlib = ["matplotlib"]
gurobi = ["gurobipy"]

dynamic = [
    "qiskit-addon-opt-mapper[cplex,cvx,matplotlib,gurobi]",
]
dev = [
    "qiskit-addon-opt-mapper[test,doctest,nbtest,lint,docs]",
    "tox>=4.4.3",
]
basetest = [
    "ddt",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-subtests>=0.13",
    "qiskit-addon-opt-mapper[dynamic]",
]
test = [
    "qiskit-addon-opt-mapper[basetest]",
]
doctest = [
    "qiskit-addon-opt-mapper[basetest,notebook-dependencies]",
    "pytest-doctestplus>=1.2.1",
]
nbtest = [
    "qiskit-addon-opt-mapper[basetest]",
    "nbmake>=1.5.0",
]
style = [
    "ruff==0.14.14",
    "nbqa>=1.8.5",
    "typos>=1.20.0",
]
lint = [
    "qiskit-addon-opt-mapper[style]",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "reno>=4.1",
    "toml>=0.9.6",
]
notebook-dependencies = [
    "qiskit-addon-opt-mapper",
    "rustworkx[graphviz]>=0.15",
    "matplotlib",
    "ipywidgets",
    "pylatexenc",
]
docs = [
    "qiskit-addon-opt-mapper[doctest]",
    "qiskit-sphinx-theme~=2.0.0",
    "jupyter-sphinx",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx_reredirects",
    "nbsphinx>=0.9.4",
    "reno>=4.1",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.hatch.build.targets.wheel]
only-include = [
    "qiskit_addon_opt_mapper",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.10"

[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "reimported",
    "no-else-raise",
    "redefined-argument-from-local",
    "redefined-builtin",
    "raise-missing-from",
    "cyclic-import",
    "unused-argument",
    "attribute-defined-outside-init",
    "no-else-return",
]

[tool.pytest.ini_options]
testpaths = ["./qiskit_addon_opt_mapper/", "./test/"]

[tool.ruff]
line-length = 100
src = ["qiskit_addon_opt_mapper", "test"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "RUF", # ruff
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.extend-per-file-ignores]
"test/**.py" = [
    "D",  # pydocstyle
]
"docs/**/*" = [
    "E402", # module level import not at top of file
    "D",    # pydocstyle
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# This code is a Qiskit project.
#
# \\(C\\) Copyright IBM \\d{4}((,\\s)\\d{4})*\\.
#
# This code is licensed under the Apache License, Version 2\\.0\\. You may
# obtain a copy of this license in the LICENSE\\.txt file in the root directory
# of this source tree or at http\\:\\/\\/www\\.apache\\.org\\/licenses\\/LICENSE\\-2\\.0\\.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals\\.
"""

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.typos.default.extend-words]
MIS = "MIS" # acronym for maximum independent set